fix: logo margin and letter spacing

--- a/assets/fonts/Lato/lato.css
+++ b/assets/fonts/Lato/lato.css
@@ -11,15 +11,14 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("./Lato-Bold.ttf") format("truetype");
-  font-weight: bold;
+  src: url("./Lato-Medium.ttf") format("truetype");
+  font-weight: 500;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("./Lato-BoldItalic.ttf") format("truetype");
+  src: url("./Lato-Bold.ttf") format("truetype");
   font-weight: bold;
-  font-style: italic;
 }
 
 @font-face {
@@ -28,12 +27,6 @@
   font-weight: 300;
 }
 
-@font-face {
-  font-family: "Lato";
-  src: url("./Lato-LightItalic.ttf") format("truetype");
-  font-weight: 300;
-  font-style: italic;
-}
 body {
   font-family: "Lato", sans-serif;
 }
